--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">Wallpaper Setter</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="backgrounds">Backgrounds</string>
+    <string name="fashion">Fashion</string>
+    <string name="nature">Nature</string>
+    <string name="science">Science</string>
+    <string name="education">Education</string>
+    <string name="health">Health</string>
+    <string name="computer">Computer</string>
 </resources>
