--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="education">Education</string>
     <string name="health">Health</string>
     <string name="computer">Computer</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="wallpaper_changed">Wallpaper changed</string>
+    <string name="network_error">Check Internet</string>
 </resources>
