Add Splash screen and new Icon fo App

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="computer">Computer</string>
     <string name="wallpaper_changed">Wallpaper changed</string>
     <string name="network_error">Check Internet</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
