--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,5 @@
     <string name="computer">Компьютер</string>
     <string name="wallpaper_changed">Обои изменены</string>
     <string name="network_error">Проверьте интернет</string>
+    <string name="categories">Категории</string>
 </resources>
